--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0",
-        "symfony/symfony": ">=2.2.0",
-        "stof/doctrine-extensions-bundle": "dev-master",
-        "sonata-project/admin-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
-        "knplabs/knp-paginator-bundle": "2.3.2",
-        "vich/uploader-bundle": "0.8.1",
-        "avalanche123/imagine-bundle": "dev-master",
-        "liip/functional-test-bundle": "dev-master"
+        "php": ">=5.3.3",
+        "symfony/symfony": "2.6.*",
+        "stof/doctrine-extensions-bundle": "1.1.*",
+        "sonata-project/admin-bundle": "2.3.*",
+        "sonata-project/doctrine-orm-admin-bundle": "2.3.*",
+        "knplabs/knp-paginator-bundle": "2.3.*",
+        "vich/uploader-bundle": "0.8.*",
+        "avalanche123/imagine-bundle": "2.1.*",
+        "liip/functional-test-bundle": "1.2.*"
     },
     "suggest": {
         "doctrine/doctrine-fixtures-bundle": "required for functional testing",
