--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.6.*",
         "stof/doctrine-extensions-bundle": "1.1.*",
+        "sonata-project/core-bundle": "~2.2",
         "sonata-project/admin-bundle": "2.3.*",
         "sonata-project/doctrine-orm-admin-bundle": "2.3.*",
         "knplabs/knp-paginator-bundle": "2.3.*",
